--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>daved downloads</title>
     </head>
     <body>
-        <h1><a href="downloads/"target="_blank"> download minecraft</a></h1>
+        <h1><a href="https://github.com/davedachingchingberrry/daved_download/blob/main/downloads/Minecraft.exe?raw=true"target="_blank"> download minecraft</a></h1>
     </body>
 </html>
 
